--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         &copy; 2023 MIU WAP
         <div>
 
-            <a href="https://validator.w3.org/check?https://oankha.github.io/cs472WAP122023/"> HTML Validator
+            <a href="https://validator.w3.org/check?url=https://oankha.github.io/cs472WAP122023/"> HTML Validator
                 <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="Validate" />
             </a>
 
