--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         </section>
         <section>
             <h2>Images</h2>
-            <img src="/img/dog.png" alt="it is dog" width="25%" height="25%" title="dog">
-            <img src="./img/smile.png" alt="it is smile" width="25%" height="25%" title="smile">
-            <img src="smile.png" alt="it is smile" width="25%" height="25%">
+            <img src="/img/dog.png" alt="it is dog" title="dog">
+            <img src="./img/smile.png" alt="it is smile" title="smile">
+            <img src="smile.png" alt="it is smile">
         </section>
         <section>
             <h2>Table</h2>
